developed basic interface

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "build": "react-scripts build"
   },
   "dependencies": {
+    "@2gis/mapgl": "^1.40.0",
+    "@2gis/mapgl-directions": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
