--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@2gis/mapgl": "^1.40.0",
     "@2gis/mapgl-clusterer": "^2.5.0",
     "@2gis/mapgl-directions": "^2.0.2",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
